--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             several courses, despite not having access to laboratory facilities.
                         </p>
                         <div class="top-btn">
-                            <button class="btn-border">
+                            <button class="btn-border" onclick="window.print()">
                                 Download CV
                             </button>
                         </div>
@@ -209,23 +209,45 @@
                     </div>
                     <div class="section-title">
                         <h2>
-                            Education
+                            Skills
                         </h2>
                     </div>
                 </div>
                 <div class="section-wrapper">
-                    <div class="vertical_line">
-
+                    <div class="card-s">
+                        <h4>
+                            Python
+                        </h4>
                     </div>
-                    <div class="card-wrapper">
-                        <div class="card">
-                            <h4>
-                                B.Sc. Biomedical Engineering-with Emphasis on Biomaterials
-                            </h4>
-                            <p>
-                                Maziar Higher Education Institute, Royan, Iran - GPA: 3.34 out of 4
-                            </p>
-                        </div>
+                    <div class="card-s">
+                        <h4>
+                            MATLAB
+                        </h4>
+                    </div>
+                    <div class="card-s">
+                        <h4>
+                            BioRender
+                        </h4>
+                    </div>
+                    <div class="card-s">
+                        <h4>
+                            Laboratory Research
+                        </h4>
+                    </div>
+                    <div class="card-s">
+                        <h4>
+                            Critical Thinking
+                        </h4>
+                    </div>
+                    <div class="card-s">
+                        <h4>
+                            Problem solving
+                        </h4>
+                    </div>
+                    <div class="card-s">
+                        <h4>
+                            Communication
+                        </h4>
                     </div>
                 </div>
             </section>
@@ -269,7 +291,7 @@
                     </div>
                     <div class="section-title">
                         <h2>
-                            Education
+                            Researche Experience
                         </h2>
                     </div>
                 </div>
@@ -280,10 +302,19 @@
                     <div class="card-wrapper">
                         <div class="card">
                             <h4>
-                                B.Sc. Biomedical Engineering-with Emphasis on Biomaterials
+                                Cell Culture, Medical Internship
                             </h4>
                             <p>
-                                Maziar Higher Education Institute, Royan, Iran    -    GPA: 3.34 out of 4 
+                                Materials and Energy Research Center, Karaj, Iran
+                            </p>
+                        </div>
+                        <div class="card">
+                            <h4>
+                                Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of
+                                Organic Chemistry
+                            </h4>
+                            <p>
+                                 Maziar Higher Education Institute, Royan, Iran
                             </p>
                         </div>
                     </div>
@@ -329,7 +360,7 @@
                     </div>
                     <div class="section-title">
                         <h2>
-                            Education
+                            Work Experience
                         </h2>
                     </div>
                 </div>
@@ -340,10 +371,34 @@
                     <div class="card-wrapper">
                         <div class="card">
                             <h4>
-                                B.Sc. Biomedical Engineering-with Emphasis on Biomaterials
+                                Private Chemistry and Mathematics Tutor
                             </h4>
                             <p>
-                                Maziar Higher Education Institute, Royan, Iran    -    GPA: 3.34 out of 4 
+                                Rasht Iran 2019 - Present
+                            </p>
+                        </div>
+                        <div class="card">
+                            <h4>
+                                Laboratory Quality Control Head, Anjir Talaee Co.
+                            </h4>
+                            <p>
+                                Karaj, Iran 2016 - 2019
+                            </p>
+                        </div>
+                        <div class="card">
+                            <h4>
+                                Technical Trainer, Anjir Talaee Co.
+                            </h4>
+                            <p>
+                                Karaj, Iran 2016 - 2019
+                            </p>
+                        </div>
+                        <div class="card">
+                            <h4>
+                                Laboratory Quality Control Head, Saramad Teb Parayeh, Karaj, Iran 2016 - 2016
+                            </h4>
+                            <p>
+                                Rasht Iran 2019 - Present
                             </p>
                         </div>
                     </div>
@@ -389,7 +444,7 @@
                     </div>
                     <div class="section-title">
                         <h2>
-                            Education
+                            Publication
                         </h2>
                     </div>
                 </div>
@@ -400,10 +455,32 @@
                     <div class="card-wrapper">
                         <div class="card">
                             <h4>
-                                B.Sc. Biomedical Engineering-with Emphasis on Biomaterials
+                                The Enigma of Telomere: How Length Affects Stem Cell Behaviour
                             </h4>
                             <p>
-                                Maziar Higher Education Institute, Royan, Iran    -    GPA: 3.34 out of 4 
+                                International Journal of Pediatrics. This review article examines the role of
+                                telomere length in stem cell function and differentiation.
+                            </p>
+                        </div>
+                        <div class="card">
+                            <h4>
+                                Cancer Stem Cells: the Key Players in Tumor Progression and Therapy
+                                Resistance
+                            </h4>
+                            <p>
+                                This review article discusses the biology of cancer stem cells
+                                and their role in tumor progression and resistance to therapy.. 
+                            </p>
+                        </div>
+                        <div class="card">
+                            <h4>
+                                Empowering Women: Global Perspectives on Breast Cancer Awareness
+                                and Treatment
+                            </h4>
+                            <p>
+                                This review article examines the current state of breast
+                                cancer awareness and treatment in different parts of the world, with a focus on the unique
+                                challenges faced by women in developing countries.
                             </p>
                         </div>
                     </div>
@@ -449,7 +526,7 @@
                     </div>
                     <div class="section-title">
                         <h2>
-                            Education
+                            Licenses and Certificates
                         </h2>
                     </div>
                 </div>
@@ -460,11 +537,101 @@
                     <div class="card-wrapper">
                         <div class="card">
                             <h4>
-                                B.Sc. Biomedical Engineering-with Emphasis on Biomaterials
+                                Mendeley Advisor Certification
+                                <p class="p1">
+                                    Mendeley, 2023
+                                </p>
                             </h4>
-                            <p>
-                                Maziar Higher Education Institute, Royan, Iran    -    GPA: 3.34 out of 4 
-                            </p>
+                            <h4>
+                                Cancer Biology, Johns Hopkins University on Coursera
+                                <p class="p1">
+                                    2023
+                                </p>
+                            </h4>
+                            <h4>
+                                Advanced Reproducibility in Cancer Informatics, Johns Hopkins University on Coursera
+                                <p class="p1">
+                                    2023
+                                </p>
+                            </h4>
+                            <h4>
+                                Documentation and Usability for Cancer Informatics, Johns Hopkins University on Coursera
+                                <p class="p1">
+                                    2023
+                                </p>
+                            </h4>
+                            <h4>
+                                Leadership for Cancer Informatics Research, Johns Hopkins University on Coursera
+                                <p class="p1">
+                                    2023
+                                </p>
+                            </h4>
+                            <h4>
+                                Computing for Cancer Informatics, Johns Hopkins University on Coursera
+                                <p class="p1">
+                                    2023
+                                </p>
+                            </h4>
+                            <h4>
+                                Artificial Intelligence for Breast Cancer Detection, Johns Hopkins University on Coursera
+                                <p class="p1">
+                                    2023
+                                </p>
+                            </h4>
+                            <h4>
+                                Introduction to Breast Cancer, Yale University on Coursera
+                                <p class="p1">
+                                    2023
+                                </p>
+                            </h4>
+                            <h4>
+                                The Science of Stem Cells, American Museum of Natural History on Coursera
+                                <p class="p1">
+                                    2023
+                                </p>
+                            </h4>
+                            <h4>
+                                Health After Cancer: Cancer Survivorship for Primary Care, Stanford University on Coursera
+                                <p class="p1">
+                                    2023
+                                </p>
+                            </h4>
+                            <h4>
+                                Cervical Cancer Risk Prediction Using Machine Learning, Coursera Project Network
+                                <p class="p1">
+                                    2023
+                                </p>
+                            </h4>
+                            <h4>
+                                TOEFL Preparation, University of California, Irvine on Coursera
+                                <p class="p1">
+                                    2023
+                                </p>
+                            </h4>
+                            <h4>
+                                ISO 9001, Industrial Engineering House, Tehran, Iran
+                                <p class="p1">
+                                    2019
+                                </p>
+                            </h4>
+                            <h4>
+                                ISO 14001, Industrial Engineering House, Tehran, Iran
+                                <p class="p1">
+                                    2019
+                                </p>
+                            </h4>
+                            <h4>
+                                Quality Control Master Program, Industrial Engineering House, Tehran, Iran
+                                <p class="p1">
+                                    2018
+                                </p>
+                            </h4>
+                            <h4>
+                                5S Methodology, Industrial Engineering House, Tehran, Iran
+                                <p class="p1">
+                                    2018
+                                </p>
+                            </h4>
                         </div>
                     </div>
                 </div>
