--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                         <img alt="Picture of me" src="/photo_2023-09-29_11-26-57.jpg">
                         <div class="social_media">
                             <div class="btn-container">
-                                <a>
+                                <a href="https://www.linkedin.com/in/maedehyousefinia/" target="_blank"
+                                    title="linkedin">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"
                                         fill="none">
                                         <path
@@ -100,9 +101,11 @@
                             several courses, despite not having access to laboratory facilities.
                         </p>
                         <div class="top-btn">
-                            <button class="btn-border" onclick="window.print()">
-                                Download CV
-                            </button>
+                            <a href="./MaedehYousefiniaCV.pdf" download="" target="_blank" rel="noopener">
+                                <button class="btn-border">
+                                    Download CV
+                                </button>
+                            </a>
                         </div>
                     </article>
                 </div>
@@ -412,6 +415,23 @@
 
             </section>
             <section id="Awards">
+                <div class="section-header">
+                    <div class="section-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" fill="none">
+                            <path
+                                d="M17.2605 22.3551C17.2605 24.5838 17.2605 26.7954 17.2605 29.0048C17.2605 29.8628 17.1854 30.6694 16.3231 31.1199C15.523 31.5489 14.7486 31.3344 14.1373 30.7788C12.4512 29.2772 10.8382 29.2065 9.13497 30.7573C8.50646 31.3322 7.69777 31.5639 6.85905 31.0855C6.02033 30.6072 6.00102 29.8371 6.00102 29.0306C6.00102 27.0657 5.98601 25.1008 6.01175 23.1359C6.01175 22.6039 5.88948 22.3122 5.34463 22.1149C4.0962 21.6601 3.39477 20.7291 3.26177 19.3885C3.18026 18.5776 2.78771 18.05 2.01334 17.6724C0.136406 16.7822 -0.46636 14.9396 0.496776 13.112C0.698461 12.7776 0.805051 12.3946 0.805051 12.0041C0.805051 11.6136 0.698461 11.2305 0.496776 10.8961C-0.45778 9.10931 0.127822 7.26455 1.92968 6.3915C2.71478 6.00968 3.13521 5.48843 3.27678 4.62611C3.6393 2.41026 5.11082 1.46428 7.33954 1.77317C7.95694 1.81618 8.56667 1.61602 9.03844 1.21545C10.8339 -0.406222 12.3912 -0.404077 14.2059 1.21545C14.6813 1.61145 15.2921 1.80687 15.9091 1.7603C18.0542 1.45999 19.6501 2.42098 19.9676 4.51886C20.1156 5.49058 20.5575 6.02041 21.4155 6.42582C23.0886 7.23666 23.6828 9.13505 22.7969 10.7953C22.3422 11.6426 22.3357 12.3419 22.7969 13.1957C23.715 14.9117 23.0844 16.7651 21.3297 17.6188C20.5532 17.9963 20.0963 18.4618 19.9997 19.367C19.8303 20.978 18.8586 21.9454 17.2605 22.3551ZM2.63326 11.9644C2.4016 12.6079 2.22999 13.2171 1.964 13.7856C1.42773 14.9332 1.62722 15.7161 2.76626 16.2417C4.0533 16.8401 4.73543 17.7883 4.86843 19.2126C4.97139 20.3237 5.81655 20.8943 6.91911 20.6519C8.22117 20.3666 9.30443 20.6777 10.2332 21.6365C11.2479 22.6812 12.0137 22.6812 13.0347 21.6215C13.4317 21.1813 13.9404 20.8568 14.5069 20.6823C15.0733 20.5078 15.6765 20.4899 16.2523 20.6305C17.5115 20.8793 18.1957 20.3838 18.3781 19.0796C18.4377 18.4727 18.6579 17.8927 19.0161 17.3992C19.3742 16.9057 19.8574 16.5165 20.4159 16.2717C21.6193 15.6925 21.896 14.9053 21.261 13.7663C20.6261 12.6272 20.5896 11.4882 21.231 10.3148C21.896 9.09858 21.645 8.32207 20.373 7.74075C19.1868 7.18947 18.5819 6.26924 18.3867 5.02081C18.1721 3.6308 17.6681 3.20179 16.2931 3.412C14.9181 3.62222 13.7833 3.28973 12.8331 2.22149C12.1552 1.46213 11.2007 1.38706 10.57 2.09493C9.50821 3.29188 8.27479 3.6501 6.7282 3.38197C5.6857 3.20607 4.96281 3.79168 4.87272 4.8256C4.74616 6.25422 4.04686 7.18518 2.7684 7.79653C1.62508 8.33279 1.42345 9.09644 1.97258 10.2505C2.22141 10.791 2.4016 11.3595 2.63326 11.9644ZM7.68705 29.7685C8.63088 29.1914 9.49749 28.7174 10.2997 28.1554C11.2135 27.5119 12.0523 27.5312 12.9596 28.1554C13.7597 28.7045 14.6135 29.1807 15.5337 29.747V22.0012C14.9481 22.3487 14.4612 22.531 14.1094 22.8592C12.4748 24.4315 10.7867 24.4272 9.12853 22.8592C8.7703 22.5203 8.25334 22.3465 7.62698 22.0012C7.62698 24.5753 7.62698 26.8319 7.62698 29.0799C7.62913 29.2386 7.65916 29.4059 7.68705 29.762V29.7685Z"
+                                fill="#F0F1F3" />
+                            <path
+                                d="M11.6297 5.29746C12.5143 5.29263 13.3911 5.46333 14.2094 5.7997C15.0276 6.13608 15.7709 6.63143 16.3964 7.25708C17.0218 7.88273 17.5169 8.62624 17.8531 9.44456C18.1892 10.2629 18.3596 11.1398 18.3545 12.0244C18.3494 13.8118 17.6386 15.5248 16.3768 16.7907C15.1149 18.0565 13.4042 18.7728 11.6168 18.7835C9.83043 18.7569 8.12482 18.0348 6.86232 16.7707C5.59982 15.5066 4.87992 13.8001 4.85556 12.0137C4.86577 10.2255 5.58459 8.5144 6.85444 7.25541C8.12428 5.99643 9.84152 5.29232 11.6297 5.29746ZM6.533 12.0051C6.52122 12.6841 6.64504 13.3587 6.89722 13.9893C7.1494 14.6199 7.52486 15.1938 8.00162 15.6775C8.47838 16.1612 9.04686 16.5449 9.67375 16.8061C10.3007 17.0673 10.9734 17.2009 11.6525 17.1989C12.3317 17.1969 13.0036 17.0594 13.6289 16.7945C14.2543 16.5296 14.8205 16.1425 15.2944 15.6561C15.7683 15.1696 16.1404 14.5934 16.3888 13.9614C16.6373 13.3293 16.7572 12.654 16.7414 11.9751C16.7532 11.296 16.6293 10.6214 16.3772 9.99085C16.125 9.36026 15.7495 8.78632 15.2728 8.30264C14.796 7.81897 14.2275 7.43527 13.6006 7.17404C12.9737 6.9128 12.301 6.77927 11.6219 6.78127C10.9427 6.78327 10.2708 6.92075 9.64545 7.18567C9.02011 7.45059 8.4539 7.83762 7.97999 8.32409C7.50609 8.81057 7.13401 9.3867 6.88554 10.0188C6.63708 10.6508 6.51723 11.3261 6.533 12.0051Z"
+                                fill="#F0F1F3" />
+                        </svg>
+                    </div>
+                    <div class="section-title">
+                        <h2>
+                            Awards and Honors
+                        </h2>
+                    </div>
+                </div>
 
             </section>
             <section id="Licenses">
@@ -630,27 +650,27 @@
 
 
 
-        const liElements = document.querySelectorAll('ul li');
-        const observerOptions = {
-            root: null,
-            rootMargin: '0px',
-            threshold: 0.5 // Adjust this threshold as needed
-        };
+        // const liElements = document.querySelectorAll('ul li');
+        // const observerOptions = {
+        //     root: null,
+        //     rootMargin: '0px',
+        //     threshold: 0.5 // Adjust this threshold as needed
+        // };
 
-        function activateNavOnScroll(entries, observer) {
+        // function activateNavOnScroll(entries, observer) {
 
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    // Remove 'active' class from all li elements
-                    liElements.forEach(li => {
-                        li.classList.remove('active');
-                    });
+        //     entries.forEach(entry => {
+        //         if (entry.isIntersecting) {
+        //             // Remove 'active' class from all li elements
+        //             liElements.forEach(li => {
+        //                 li.classList.remove('active');
+        //             });
 
-                    // Add 'active' class to the current li element
-                    document.querySelector(`#${entry.target.id}-li`).classList.add('active');
-                }
-            });
-        }
+        //             // Add 'active' class to the current li element
+        //             document.querySelector(`#${entry.target.id}-li`).classList.add('active');
+        //         }
+        //     });
+        // }
 
         const observer = new IntersectionObserver(activateNavOnScroll, observerOptions);
 
@@ -664,13 +684,6 @@
             this.classList.toggle("active");
             const content = document.getElementById("content");
             content.style.maxHeight = (content.style.maxHeight === "0px") ? "500px" : "0px";
-        });
-
-        const contactLink = document.querySelector('a[href="#Contact"]');
-        contactLink.addEventListener('click', function (e) {
-            e.preventDefault();
-            const contactSection = document.getElementById("Contact");
-            contactSection.scrollIntoView({ behavior: "smooth" });
         });
 
     </script>
