--- a/index.html
+++ b/index.html
@@ -672,11 +672,11 @@
         //     });
         // }
 
-        const observer = new IntersectionObserver(activateNavOnScroll, observerOptions);
+        // const observer = new IntersectionObserver(activateNavOnScroll, observerOptions);
 
-        document.querySelectorAll('section').forEach(section => {
-            observer.observe(section);
-        });
+        // document.querySelectorAll('section').forEach(section => {
+        //     observer.observe(section);
+        // });
 
         const coll = document.getElementById("collapsible");
 
