--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         </nav>
         <div id="content" style="max-height: 0px">
           <ul class="collapsible-nav">
-            <li href="#Home"><a href="#Home">Home</a></li>
-            <li><a href="#Education">Education</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#Researche">Researche Experience</a></li>
-            <li><a href="#work">Work Experience</a></li>
-            <li><a href="#Publication">Publication</a></li>
-            <li><a href="#Awards">Awards and Honors</a></li>
-            <li><a href="#Licenses">Licenses and Certificates</a></li>
+            <li href="#Home" onclick="collapse()"><a href="#Home">Home</a></li>
+            <li><a href="#Education" onclick="collapse()">Education</a></li>
+            <li><a href="#skills" onclick="collapse()">Skills</a></li>
+            <li><a href="#Researche" onclick="collapse()">Researche Experience</a></li>
+            <li><a href="#Work" onclick="collapse()">Work Experience</a></li>
+            <li><a href="#Publication" onclick="collapse()">Publication</a></li>
+            <li><a href="#Awards" onclick="collapse()">Awards and Honors</a></li>
+            <li><a href="#Licenses" onclick="collapse()">Licenses and Certificates</a></li>
           </ul>
         </div>
         <aside class="sidebar">
@@ -653,8 +653,8 @@
           <li><a href="#Home">Home</a></li>
           <li><a href="#Education">Education</a></li>
           <li><a href="#skills">skills</a></li>
-          <li><a href="#Researche">What I do</a></li>
-          <li><a href="#Contact">Contact</a></li>
+          <li><a href="#Work">Work Experience</a></li>
+          <li><a href="#Licenses">Licenses and Certificates</a></li>
         </ul>
       </footer>
     </div>
@@ -711,6 +711,13 @@
         content.style.maxHeight =
           content.style.maxHeight === "0px" ? "500px" : "0px";
       });
+      function collapse(){
+        console.log("clicked");
+        coll.classList.remove("active");
+        const content = document.getElementById("content");
+        content.style.maxHeight =
+          content.style.maxHeight === "0px" ? "500px" : "0px";
+      };
     </script>
   </body>
 </html>
