--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
         <ul>
             <li><a href="#Home">Home</a></li>
             <li><a href="#Education">Education</a></li>
-            <li><a href="#skills">skills</a></li>
+            <li><a href="#skills">Skills</a></li>
             <li><a href="#Work">Work Experience</a></li>
             <li><a href="#Licenses">Licenses and Certificates</a></li>
         </ul>
