--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
             <li><a href="#Education">Education</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#Work">Work Experience</a></li>
-            <li><a href="#Licenses">Licenses and Certificates</a></li>
+            <li><a href="#Publication">Publication</a></li>
         </ul>
     </footer>
     </div>
