--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                 content.style.maxHeight === "0px" ? "500px" : "0px";
         };
         document.addEventListener('click', function (event) {
-            console.log(event.target);
+            // console.log(event.target);
             if (event.target !== coll && event.target !== collaps_1 && event.target !== collaps_2 && event.target !== collaps_3 && event.target !== collaps_4 ) {
                 coll.classList.remove("active");
             content.style.maxHeight ="0px";
