--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
     <footer>
         <ul>
             <li><a href="#Home">Home</a></li>
-            <li><a href="mailto:hi@imbiologist.com">Email: hi@imbiologist.com</a></li>
+            <li><a href="mailto:hi@imbiologist.com">hi@imbiologist.com</a></li>
             <!-- <li><a href="#skills">Skills</a></li>
             <li><a href="#Work">Work Experience</a></li>
             <li><a href="#Publication">Publication</a></li> -->
